lagt til delingsoversikt i profil

--- a/sharestuff/templates/sharestuff/profile.html
+++ b/sharestuff/templates/sharestuff/profile.html
@@ -7,4 +7,8 @@
 {% for ting in likte_titler %}
 <p>{{ ting }}</p>
 {% endfor %}
+<h1>Liste over hva {{ request.user }} har delt </h1>
+{% for ting in har_delt %}
+<p>{{ ting }}</p>
+{% endfor %}
 {% endblock %}
