--- a/sharestuff/templates/sharestuff/take.html
+++ b/sharestuff/templates/sharestuff/take.html
@@ -6,7 +6,7 @@
   <p class="minfo">Klikk på prosjektet for å se detaljer og få tilgang til ressurser</p>
 <ul class="list-group">
 {% for teaching in teachings %}
-<li class="list-group-item">
+<li class="list-group-item list">
 <a href="{% url 'details' pk=teaching.pk %}">
   {% if teaching.mediatype == 'youtube' %}
   <i class="fa fa-youtube" aria-hidden="true"></i>
