--- a/sharestuff/templates/sharestuff/givetake.html
+++ b/sharestuff/templates/sharestuff/givetake.html
@@ -4,7 +4,7 @@
        <div class="col-md-4">
          <a href="{{ 'give' }}">
          <h1><i class="fa fa-gift" aria-hidden="true"></i>
-           Gi bort</h1>
+           Del</h1>
        </a>
 
          <p>
@@ -18,8 +18,7 @@
          <a href="{{ 'take' }}">
          <h1>
            <h1><i class="fa fa-leaf" aria-hidden="true"></i>
-
-           Ta med</h1>
+           Finn</h1>
        </a>
          <p>
            Gode lærere deler kunnskap. Hent kunnskap og inspirasjon her.
