nyhetsside lagt til

--- a/sharestuff/templates/sharestuff/givetake.html
+++ b/sharestuff/templates/sharestuff/givetake.html
@@ -27,8 +27,10 @@
 
        </div>
        <div class="col-md-4">
+         <a href="{% url 'news' %}">
          <h1><i class="fa fa-bullhorn" aria-hidden="true"></i>
            Nyheter</h1>
+         </a>
          <p>Ny plattform for å dele undervisningsopplegg - sorter på klasse og fag!
          </p>
        </div>
