--- a/sharestuff/templates/sharestuff/news.html
+++ b/sharestuff/templates/sharestuff/news.html
@@ -3,12 +3,20 @@
 <h1>
 <i class="fa fa-bullhorn" aria-hidden="true"></i>
   Nyheter</h1>
+
+  <h3>Profil <small>12. oktober 2016</small> </h3>
+  <p>Ved å klikke på brukernavnet ditt når du er innlogget kan du nå se din profil.
+  Her får du oversikt over dine favoritter og hva du har delt. </p>
+
 <h3>Emneknagger <small>10. oktober 2016</small> </h3>
 <p>Siden har nå fått hashtags. Når du deler ressurser kan
   du bruke emneknagger i "beskrivelsesfeltet". Slik kan brukere finne
   liknende ressurser ved å filtrere på hashtags. Senere vil også et
   hashtag-søk bli lagt til.
 </p>
+
+
+
      <hr>
      <address class="minfo">verjson: proto_0.1 |
        <a href="mailto:hakdo@outlook.com">hakdo@outlook.com</a>
