--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -3,7 +3,8 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h1>Logg inn for å dele</h1>
+    <h1>Logg inn for å dele
+    <small>{{ msg }}</small></h1>
 <form method="post">{% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Login</button>
@@ -12,13 +13,13 @@
 <div class="col-md-6">
 <h2>Beta</h2>
 <p>
-Mens Kunnskapsdeleren er i beta, må du sende en e-post for å be om brukernavn
-og passord. Send til <a href="mailto:hakdo@outlook.com">hakdo@outlook.com</a>
-for å be om tilgang.
+Kunnskapsdeleren er i beta. Du er velkommen til å prøve den ut.
+Du registerer raskt en <a href="{% url 'beta' %}">testbruker</a>
+og deretter kan du logge inn og teste all funksjonalitet.
 </p>
 <p>
 Dette er en tidlig lukket beta-test. Forvent hickups, og noter feilmeldinger
-og irritasjonsmomenter. 
+og irritasjonsmomenter.
 </p>
 </div>
 {% endblock %}
