--- a/sharestuff/templates/sharestuff/givetake.html
+++ b/sharestuff/templates/sharestuff/givetake.html
@@ -1,6 +1,12 @@
 {% extends 'sharestuff/base.html' %}
 {% block content %}
      <div class="row">
+       {% if newreg == True %}
+       <h1><i class="fa fa-user" aria-hidden="true"></i>
+         Velkommen som ny bruker, {{ request.user }}!
+       </h1>
+       <hr />
+      {% endif %}
        <div class="col-md-4">
          <a href="{{ 'give' }}">
          <h1><i class="fa fa-gift" aria-hidden="true"></i>
