--- a/registration/templates/registration/base.html
+++ b/registration/templates/registration/base.html
@@ -26,6 +26,22 @@
   <p class="lead">
   En enkel måte å dele og finne undervisningsopplegg på.
   </p>
+  <div class="userinfo">
+    {% if user.is_authenticated %}
+    Du er logget på som
+    <a href="{% url 'profile' %}">{{ user.username }}</a> |
+    <a href="{% url 'logout' %}">
+      Logg ut
+      <i class="fa fa-sign-out" aria-hidden="true"></i>
+    </a>
+    {% endif %}
+    {% if not user.is_authenticated %}
+    <a href="{% url 'login' %}">
+      Logg inn
+      <i class="fa fa-sign-in" aria-hidden="true"></i>
+    </a>
+    {% endif %}
+  </div>
   </div>
 
 {% block content %}
