--- a/sharestuff/templates/sharestuff/detailsfb.html
+++ b/sharestuff/templates/sharestuff/detailsfb.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <meta property="og:url"           content="http://hakdo.pythonanywhere.com{{ request.get_full_path }}" />
+  <meta property="og:url"           content="http://hakdo.pythonanywhere.com/details{{ teaching.id }}" />
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="{{ teaching.tittel }}" />
   <meta property="og:description"   content="{{ teaching.beskrivelse }}" />
