--- a/sharestuff/templates/sharestuff/detailsfb.html
+++ b/sharestuff/templates/sharestuff/detailsfb.html
@@ -119,7 +119,7 @@
       {% endif %}
     </a>
     </p>
-
+    {% if user.is_authenticated %}
     <form method="POST">{% csrf_token %}
     <button type="submit" class="hiddenbutton">
     <p class="likeit">
@@ -134,6 +134,7 @@
       {% endif %}
     </p>
   </button>
+  {% endif %}
     <p class="likeit">
       <a class="likeit" href="{% url 'take' %}">
       <i class="fa fa-list" aria-hidden="true"></i>
