--- a/sharestuff/templates/sharestuff/search.html
+++ b/sharestuff/templates/sharestuff/search.html
@@ -1,13 +1,36 @@
 {% extends 'sharestuff/base.html' %}
-{% block content %}
+{% load static %}
 
+{% block content %}
 <div class="row">
-  <div class="col-md-8">
-    <h1><i class="fa fa-leaf" aria-hidden="true"></i>
-    Vil du ta med noe i dag?</h1>
-    <p class="minfo">Klikk på prosjektet for å se detaljer og få tilgang til ressurser</p>
+  <div class="col-md-6">
+<h1>Hva leter du etter?</h1>
+
+<form method="POST" class="form-inline">{% csrf_token %}
+  {{ form.non_field_errors }}
+  <div class="form-group">
+    {{ form.searchterms.errors }}
+    <label for="{{ form.searchterms.id_for_label }}" />
+    <input id="id_searchterms" class="form-control" maxlength="200" name="searchterms" type="text"
+    value="{{ sterm }}" required />
+  </div>
+<button type="submit" class="btn btn-info" value="search">Søk</button>
+</form>
+</div>
+<div class="col-md-6">
+{% if hashstatus is True %}
+<h1>Treff på #hashtags</h1>
+{% for item in hashres %}
+<a href="{% url 'tags' pk=item.pk %}">{{ item.hashtag }}</a>
+{% endfor %}
+{% endif %}
+</div>
+</div>
+<div>
+{% if tittelstatus is True %}
+<h1>Treff på tittel</h1>
 <ul class="list-group">
-{% for teaching in teachings %}
+{% for teaching in tittelres %}
 <li class="list-group-item list">
 <a href="{% url 'details' pk=teaching.pk %}">
   {% if teaching.mediatype == 'youtube' %}
@@ -39,32 +62,9 @@
 </li>
 {% endfor %}
 </ul>
-</div>
 
-<div class="col-4-md">
 
-<h1>#tags</h1>
-{% for hashtag in tags %}
-<a href="{% url 'tags' pk=hashtag.pk %}">{{ hashtag.hashtag }}</a>
-{% endfor %}
-<br /><br />
-<div>
-  <form method="POST" action="{% url 'search' %}" class="form-inline">{% csrf_token %}
-    {{ form.non_field_errors }}
-    <div class="form-group">
-      {{ form.searchterms.errors }}
-      <label for="{{ form.searchterms.id_for_label }}" />
-      <input class="form-control" id="id_searchterms" maxlength="200" name="searchterms" type="text" required />
-    </div>
-  <button type="submit" class="btn btn-default" value="search">Søk</button>
-  </form>
+{% endif %}
 </div>
-
-</div>
-
-</div>
-<p>Foreløbig er dette bare en enkel liste med lenker. Tenkte å lage noe mer
-  fornuftig etter hvert.
-</p>
 
 {% endblock %}
