--- a/sharestuff/templates/sharestuff/tags.html
+++ b/sharestuff/templates/sharestuff/tags.html
@@ -46,6 +46,20 @@
 {% for hashtag in tags %}
 <a href="{% url 'tags' pk=hashtag.pk %}">{{ hashtag.hashtag }}</a>
 {% endfor %}
+<br /><br />
+<div>
+  <form method="POST" action="{% url 'search' %}" class="form-inline">{% csrf_token %}
+    {{ form.non_field_errors }}
+    <div class="form-group">
+      {{ form.searchterms.errors }}
+      <label for="{{ form.searchterms.id_for_label }}" />
+      <input class="form-control" id="id_searchterms" maxlength="200" name="searchterms" type="text" required />
+    </div>
+  <button type="submit" class="btn btn-default" value="search">Søk</button>
+  </form>
+</div>
+
+
 
 </div>
 </div>
