--- a/sharestuff/templates/sharestuff/search.html
+++ b/sharestuff/templates/sharestuff/search.html
@@ -28,7 +28,7 @@
 </div>
 <div>
 {% if tittelstatus is True %}
-<h1>Treff på tittel</h1>
+<h1>Treff på innhold</h1>
 <ul class="list-group">
 {% for teaching in tittelres %}
 <li class="list-group-item list">
