--- a/sharestuff/templates/sharestuff/news.html
+++ b/sharestuff/templates/sharestuff/news.html
@@ -4,6 +4,11 @@
 <i class="fa fa-bullhorn" aria-hidden="true"></i>
   Nyheter</h1>
 
+  <h3>Søk <small>16. oktober 2016</small> </h3>
+  <p>Du kan nå søke etter ressurser for enklere å finne det du trenger.
+  Søk gir treff både i hashtags og i innhold. </p>
+
+
   <h3>Profil <small>12. oktober 2016</small> </h3>
   <p>Ved å klikke på brukernavnet ditt når du er innlogget kan du nå se din profil.
   Her får du oversikt over dine favoritter og hva du har delt. </p>
