--- a/sharestuff/templates/sharestuff/profile.html
+++ b/sharestuff/templates/sharestuff/profile.html
@@ -35,7 +35,9 @@
 
 
 {% if group_membership.count > 0  %}
-<h1>Grupper</h1>
+<h1>Grupper
+<a href="{% url 'addgroup' %}"><i class="fa fa-plus" aria-hidden="true"></i></a>
+</h1>
 {% for group in group_membership %}
 <p>
 <a href="{% url 'group' pk=group.pk %}">{{ group.title }}</a>
