orm-filter for mtmfield

--- a/sharestuff/templates/sharestuff/give.html
+++ b/sharestuff/templates/sharestuff/give.html
@@ -43,6 +43,12 @@
     {{ form.mediatype }}
   </div>
 </li>
+<li class="list-group-item">
+<div class="form-group">
+  <label for="{{ form.id_mediatype }}">Åpenhet: </label>
+    {{ form.publish_status }}
+</div>
+</li>
 </ul>
 <button type="submit" class="save btn btn-default">Del</button>
 </form>
