--- a/sharestuff/templates/sharestuff/profile.html
+++ b/sharestuff/templates/sharestuff/profile.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="row">
 
-<div class="col-md-4">
+<div class="col-md-3">
   <h1>
     <i class="fa fa-heart" aria-hidden="true"></i>
     Favoritter</h1>
@@ -12,25 +12,34 @@
 <p><a href="{% url 'details' pk=ting.pk %}">{{ ting }}</a></p>
 {% endfor %}
 </div>
-<div class="col-md-4">
+<div class="col-md-3">
 <h1>
 <i class="fa fa-gift" aria-hidden="true"></i>
   Delt </h1>
 {% for ting in har_delt %}
 <p><a href="{% url 'details' pk=ting.pk %}">{{ ting }}</a></p>
 {% endfor %}
-{% if har_delt_privat|length > 0 %}
-<h1>Privat</h2>
-{% for ting in har_delt_privat %}
-<p><a href="{% url 'details' pk=ting.pk %}">{{ ting }}</a></p>
-{% endfor %}
-{% endif %}
+
 
 
 </div>
+<div class="col-md-3">
+  <h1><i class="fa fa-user-secret" aria-hidden="true"></i>
+    Privat
+  </h1>
 
+  {% if har_delt_privat|length > 0 %}
+    {% for ting in har_delt_privat %}
+      <p>
+        <a href="{% url 'details' pk=ting.pk %}">
+          <i class="fa fa-user-secret" aria-hidden="true"></i>
+          {{ ting }}</a></p>
+    {% endfor %}
+  {% endif %}
 
-<div class="col-md-4">
+</div>
+
+<div class="col-md-3">
 <h1>
 <i class="fa fa-user" aria-hidden="true"></i>
   Brukerinfo</h1>
@@ -45,7 +54,9 @@
 
 
 
-<h1>Grupper
+<h1>
+<i class="fa fa-users" aria-hidden="true"></i>
+  Grupper
 <a href="{% url 'addgroup' %}"><i class="fa fa-plus" aria-hidden="true"></i></a>
 </h1>
 
