--- a/sharestuff/templates/sharestuff/news.html
+++ b/sharestuff/templates/sharestuff/news.html
@@ -4,6 +4,17 @@
 <i class="fa fa-bullhorn" aria-hidden="true"></i>
   Nyheter</h1>
 
+  <h3>Private lenker <small>26. oktober 2016</small> </h3>
+  <p>Når du legger til en lenke via <a href="{% url 'give' %}">delingssiden</a>
+  kan du nå markere lenken som "private". Da er den kun synlig for deg via
+profilsiden din, inntil du velger å dele den med noen andre i en gruppe. </p>
+
+
+  <h3>Grupper <small>26. oktober 2016</small> </h3>
+  <p>Du kan nå via <a href="{% url 'profile' %}">profilsiden din</a>
+  opprette grupper. Her kan du lagre grupper av lenker du vil samle
+    innen en kategori, og du kan invitere andre brukere inn i gruppen. </p>
+
   <h3>Søk <small>16. oktober 2016</small> </h3>
   <p>Du kan nå søke etter ressurser for enklere å finne det du trenger.
   Søk gir treff både i hashtags og i innhold. </p>
