cta bli betatester

--- a/sharestuff/templates/sharestuff/base.html
+++ b/sharestuff/templates/sharestuff/base.html
@@ -65,8 +65,13 @@
         Logg inn
         <i class="fa fa-sign-in" aria-hidden="true"></i>
       </a>
-      {% endif %}
     </div>
+    <h2>Ikke registrert?
+      <a href="{% url 'beta' %}">
+        <i class="fa fa-user-plus" aria-hidden="true"></i>
+        Bli betatester nå!</a>
+      {% endif %}
+
   </div>
 
   <ul class="nav nav-tabs">
