lagt til lenke til brev

--- a/vestrerosten/templates/vestrerosten/vestrerosten.html
+++ b/vestrerosten/templates/vestrerosten/vestrerosten.html
@@ -21,6 +21,9 @@ og avkjøring fra E6 til Johan Tillers vei, har det blitt en
 enorm økning i gjennomgangstrafikk i Vestre Rosten. Dette er
 en boliggate, skolevei for mange barn, og veien til og fra
 fritidsaktiviteter. </p>
+<p>Brevet som vil bli sendt til kommunen kan
+  <a href="https://1drv.ms/w/s!Ap__wVCTASjFgboVe2hTgZ95_RVNbw">du lese her.</a>
+</p>
 <p>Signer oppropet i dag du også og bidra til å påvirke byutviklingen
   i nærområdet!</p>
 </div>
