underskriftskampanje vestre rosten

--- a/vestrerosten/templates/vestrerosten/vestrerosten.html
+++ b/vestrerosten/templates/vestrerosten/vestrerosten.html
@@ -30,7 +30,7 @@ fritidsaktiviteter. </p>
 </div>
 <h1>Signaturer til støtte for bedre trafikksikkerhet</h1>
 <ul class="list-group">
-{% for item in signed %}
+{% for item in signed reversed %}
 <li class="list-group-item">
   <div>
   <h3>{{ item.navn }}</h3> {{ item.adresse }}</p>
