teller på signaturer

--- a/vestrerosten/templates/vestrerosten/vestrerosten.html
+++ b/vestrerosten/templates/vestrerosten/vestrerosten.html
@@ -28,7 +28,14 @@ fritidsaktiviteter. </p>
   i nærområdet!</p>
 </div>
 </div>
-<h1>Signaturer til støtte for bedre trafikksikkerhet</h1>
+<h1>
+  Signaturer til støtte for bedre trafikksikkerhet</h1>
+
+<p class="likeit">
+  Vi har samlet {{ signed.count }} signaturer så langt. 
+  Nå er det din tur!
+</p>
+
 <ul class="list-group">
 {% for item in signed reversed %}
 <li class="list-group-item">
