--- a/vestrerosten/templates/vestrerosten/vestrerosten.html
+++ b/vestrerosten/templates/vestrerosten/vestrerosten.html
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Skriv det på listen her!</h3>
+    <h3>Skriv deg på listen her!</h3>
 <form method="post" class="form"> {% csrf_token %}
 {{ form.as_p }}
 <button type="submit" class="btn btn-primary">Signer!</button>
@@ -32,7 +32,7 @@ fritidsaktiviteter. </p>
   Signaturer til støtte for bedre trafikksikkerhet</h1>
 
 <p class="likeit">
-  Vi har samlet {{ signed.count }} signaturer så langt. 
+  Vi har samlet {{ signed.count }} signaturer så langt.
   Nå er det din tur!
 </p>
 
